[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Pixellari.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://audio/sounds/UI/selected2.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/sounds/UI/select.wav" type="AudioStream" id=4]
[ext_resource path="res://Sprites/background/prehistoric.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
light_mask = 0
anchor_left = 0.00123873
anchor_right = 1.00124
anchor_bottom = 1.0
margin_left = 0.594604
margin_right = 0.594604
focus_mode = 2
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -311.132, -30.2723 )
texture = ExtResource( 5 )

[node name="Title" type="Label" parent="."]
margin_left = 108.476
margin_top = 37.8403
margin_right = 387.476
margin_bottom = 85.8403
custom_fonts/font = SubResource( 1 )
text = "PRIMORDIAL"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 166.908
margin_top = 87.4566
margin_right = 322.908
margin_bottom = 247.457
mouse_filter = 2
mouse_default_cursor_shape = 2
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Buttons"]
margin_right = 156.0
margin_bottom = 26.0
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_bottom = NodePath("../SettingsButton")
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../ExitButton")
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
action_mode = 0
text = "START"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="Buttons"]
margin_top = 36.0
margin_right = 156.0
margin_bottom = 62.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../CreditButton")
focus_next = NodePath("../CreditButton")
focus_previous = NodePath("../StartButton")
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
action_mode = 0
text = "SETTINGS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditButton" type="Button" parent="Buttons"]
margin_top = 72.0
margin_right = 156.0
margin_bottom = 98.0
focus_neighbour_top = NodePath("../SettingsButton")
focus_neighbour_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../SettingsButton")
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
action_mode = 0
text = "CREDITS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="Buttons"]
margin_top = 108.0
margin_right = 156.0
margin_bottom = 134.0
focus_neighbour_top = NodePath("../CreditButton")
focus_neighbour_bottom = NodePath("../StartButton")
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../CreditButton")
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
action_mode = 0
text = "EXIT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlipSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sounds"

[node name="SelectedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="focus_entered" from="Buttons/StartButton" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="focus_entered" from="Buttons/SettingsButton" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="Buttons/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="focus_entered" from="Buttons/CreditButton" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="Buttons/CreditButton" to="." method="_on_CreditButton_pressed"]
[connection signal="focus_entered" from="Buttons/ExitButton" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
